--- a/app.html
+++ b/app.html
@@ -178,7 +178,7 @@
       box-sizing: border-box;
       transition: all 0.3s ease;
     }
-    .select{
+    .select, .amtIn{
 		  position: relative;
 	  }
 	  .datalistInput{ 
@@ -335,7 +335,12 @@
 				<input type="text" class="datalistInput" value="MT5:   592631072"  readonly>
 				<div class="arrow arba"><p>23,473.04 USD</p>▼</div>
 			</div>
-			
+
+			<p>Amount</p>
+			<div class="amtIn">
+				<input type="tel">
+				<div class="arrow arba">NGN</div>
+			</div>
           </div>
         </div>
 		
