--- a/app.html
+++ b/app.html
@@ -343,7 +343,13 @@
 			<button>17,497 - 14,409,902 NGN</button>
 
 			<div class="deMain"><button>Continue</button></div>
-			
+
+			<div class="terms">
+				<h4>Terms</h4>
+				<p>Average payment time <span>Instant</span></p>
+				<p>Fee <span>0%</span></p>
+			</div>
+		
           </div>
         </div>
 		
