--- a/app.html
+++ b/app.html
@@ -349,6 +349,12 @@
 				<p>Average payment time <span>Instant</span></p>
 				<p>Fee <span>0%</span></p>
 			</div>
+
+			<div class="history">
+				<div>
+					
+				</div>
+			</div>
 		
           </div>
         </div>
