--- a/app.html
+++ b/app.html
@@ -178,7 +178,16 @@
       box-sizing: border-box;
       transition: all 0.3s ease;
     }
-    .select, .amtIn{
+	  .xclose{
+		  margin: 5px 0;
+	  }
+	  .xclose button{
+		  background: transparent;
+		  font-size: 1.5rem;
+	  }
+	  
+    
+	  .select, .amtIn{
 		  position: relative;
 	  }
 	  .datalistInput{ 
