--- a/app.html
+++ b/app.html
@@ -183,7 +183,8 @@
 	  }
 	  .xclose button{
 		  background: transparent;
-		  font-size: 1.5rem;
+		  font-size: 2rem;
+		  color: #000;
 	  }
 	  
     
