--- a/app.html
+++ b/app.html
@@ -186,7 +186,15 @@
 		  font-size: 2rem;
 		  color: #000;
 	  }
-	  
+	  .modalTitle{
+		  margin: 20px 0;
+	  }
+	  .modalTitle h3{
+		  margin: 0;
+	  }
+	  .modalTitle button{
+		  background: transparent;
+	  }
     
 	  .select, .amtIn{
 		  position: relative;
@@ -302,7 +310,7 @@
         </div>
         
         <div class="modalTitle">
-          <h4>Deposit</h4>
+          <h3>Deposit</h3>
           <button>See all payment methods</button>
         </div>
 
