--- a/app.html
+++ b/app.html
@@ -190,10 +190,11 @@
 		  margin: 20px 0;
 	  }
 	  .modalTitle h3{
-		  margin: 0;
+		  margin: 5px 0;
 	  }
 	  .modalTitle button{
 		  background: transparent;
+		  padding: 0;
 	  }
     
 	  .select, .amtIn{
