--- a/app.html
+++ b/app.html
@@ -179,7 +179,7 @@
       transition: all 0.3s ease;
     }
 	  .xclose{
-		  margin: 5px 0;
+		  margin: 5px 0 10px;
 	  }
 	  .xclose button{
 		  background: transparent;
