--- a/app.html
+++ b/app.html
@@ -197,6 +197,12 @@
 		  padding: 0;
 		  font-size: 12px;
 	  }
+	  .modalBody{
+		  
+	  }
+	  .modalBody p{
+		  margin: 0;
+	  }
     
 	  .select, .amtIn{
 		  position: relative;
