--- a/app.html
+++ b/app.html
@@ -200,7 +200,7 @@
 	  .modalBody{
 		  
 	  }
-	  .modalBody p{
+	  .pahe{
 		  margin: 0;
 		  font-size: 12px;
 	  }
@@ -324,7 +324,7 @@
         </div>
 
         <div class="modalBody">
-			<p>Payment Method</p>
+			<p class="pahe">Payment Method</p>
 			<div class="select">	
 				<input type="text" class="datalistInput" id="employ" placeholder="Please select one"  readonly>
 				<div class="arrow">▼</div>
@@ -344,7 +344,7 @@
 				</ul>
 			</div>
 
-			<p>Payment Method</p>
+			<p class="pahe">Payment Method</p>
 			<div class="select">	
 				<input type="text" class="datalistInput" id="employ" placeholder="Please select one"  readonly>
 				<div class="arrow">▼</div>
@@ -356,13 +356,13 @@
 				</ul>
 			</div>
 
-			<p>Payment Method</p>
+			<p class="pahe">Payment Method</p>
 			<div class="select">	
 				<input type="text" class="datalistInput" value="MT5:   592631072"  readonly>
 				<div class="arrow arba"><p>23,473.04 USD</p>▼</div>
 			</div>
 
-			<p>Amount</p>
+			<p class="pahe">Amount</p>
 			<div class="amtIn">
 				<input type="tel">
 				<div class="arrow arba">NGN</div>
