--- a/app.html
+++ b/app.html
@@ -204,9 +204,12 @@
 		  margin: 0;
 		  font-size: 12px;
 	  }
-    
 	  .select, .amtIn{
 		  position: relative;
+	  }
+	  .select input{
+		  width: 100%;
+		  font-size: 14px;
 	  }
 	  .datalistInput{ 
 		  cursor: pointer;
