--- a/app.html
+++ b/app.html
@@ -210,6 +210,7 @@
 	  .select input{
 		  width: 100%;
 		  font-size: 14px;
+		  box-sizing: border-box;
 	  }
 	  .datalistInput{ 
 		  cursor: pointer;
