--- a/app.html
+++ b/app.html
@@ -211,6 +211,7 @@
 		  width: 100%;
 		  font-size: 14px;
 		  box-sizing: border-box;
+		  padding: 5px;
 	  }
 	  .datalistInput{ 
 		  cursor: pointer;
