--- a/app.html
+++ b/app.html
@@ -213,6 +213,10 @@
 		  box-sizing: border-box;
 		  padding: 5px;
 	  }
+	  .select p{
+		  font-size: 14px;
+		  margin-right: 10px;
+	  }
 	  .datalistInput{ 
 		  cursor: pointer;
 	  }
