--- a/app.html
+++ b/app.html
@@ -212,6 +212,7 @@
 		  font-size: 14px;
 		  box-sizing: border-box;
 		  padding: 5px;
+		  margin-bottom: 20px;
 	  }
 	  .select p{
 		  font-size: 14px;
