--- a/app.html
+++ b/app.html
@@ -204,7 +204,11 @@
 		  margin: 0;
 		  font-size: 12px;
 	  }
-	  .select, .amtIn{
+	  .select{
+		  position: relative;
+		  margin-bottom: 20px;
+	  }
+	  .amtIn{
 		  position: relative;
 	  }
 	  .select input{
@@ -212,7 +216,6 @@
 		  font-size: 14px;
 		  box-sizing: border-box;
 		  padding: 5px;
-		  margin-bottom: 20px;
 	  }
 	  .select p{
 		  font-size: 14px;
