--- a/app.html
+++ b/app.html
@@ -264,6 +264,10 @@
 	  .options li:hover {
 		  background-color: #f0f0f0;
 	  }
+	  .note{
+		  background-color: #f5f3f1;
+		  padding: 5px;
+	  }
   </style>
 </head>
   <body>
