--- a/app.html
+++ b/app.html
@@ -265,8 +265,8 @@
 		  background-color: #f0f0f0;
 	  }
 	  .note{
-		  background-color: #f5f3f1;
-		  padding: 5px;
+		  background-color: #fffde6;
+		  padding: 5px 10px;
 	  }
   </style>
 </head>
