--- a/app.html
+++ b/app.html
@@ -265,8 +265,8 @@
 		  background-color: #f0f0f0;
 	  }
 	  .note{
-		  background-color: #fffde6;
-		  padding: 5px 10px;
+		  background-color: #fffef5
+		  padding: 5px 15px;
 	  }
   </style>
 </head>
