--- a/app.html
+++ b/app.html
@@ -265,7 +265,7 @@
 		  background-color: #f0f0f0;
 	  }
 	  .note{
-		  background-color: #fffef5
+		  background-color: #fffef5;
 		  padding: 5px 15px;
 		  border-radius: 10px;
 	  }
