--- a/app.html
+++ b/app.html
@@ -268,6 +268,7 @@
 		  background-color: #fffef5;
 		  padding: 5px 15px;
 		  border-radius: 10px;
+		  border-shadow: 5px 5px 2px rgba(0, 0, 0, 0.15);
 	  }
   </style>
 </head>
