--- a/app.html
+++ b/app.html
@@ -265,7 +265,7 @@
 		  background-color: #f0f0f0;
 	  }
 	  .note{
-		  background-color: #faf9c2;
+		  background-color: #f7efda;
 		  padding: 5px 15px;
 		  border-radius: 10px;
 		  border-shadow: 5px 5px 8px rgba(0, 0, 0, 0.15);
