--- a/app.html
+++ b/app.html
@@ -269,6 +269,7 @@
 		  padding: 5px 15px;
 		  border-radius: 10px;
 		  border-shadow: 5px 5px 8px rgba(0, 0, 0, 0.15);
+		  margin-bottom: 25px;
 	  }
   </style>
 </head>
