--- a/app.html
+++ b/app.html
@@ -266,7 +266,7 @@
 	  }
 	  .note{
 		  background-color: #fffbf2;
-		  border: 1px solid #fffbf2;
+		  border: 1px solid #fffaf0;
 		  padding: 5px 15px;
 		  border-radius: 10px;
 		  border-shadow: 5px 5px 8px rgba(0, 0, 0, 0.15);
