--- a/app.html
+++ b/app.html
@@ -192,7 +192,7 @@
 	  .modalTitle h3{
 		  margin: 5px 0;
 	  }
-	  .modalTitle button{
+	  .modalTitle button, .amountBtn{
 		  background: transparent;
 		  padding: 0;
 		  font-size: 12px;
@@ -388,7 +388,7 @@
 				<input type="tel">
 				<div class="arrow arba">NGN</div>
 			</div>
-			<button>17,497 - 14,409,902 NGN</button>
+			<button class="amountBtn">17,497 - 14,409,902 NGN</button>
 
 			<div class="deMain"><button>Continue</button></div>
 
