--- a/app.html
+++ b/app.html
@@ -272,6 +272,14 @@
 		  border-shadow: 5px 5px 8px rgba(0, 0, 0, 0.15);
 		  margin-bottom: 25px;
 	  }
+	  .amtIn{
+	  }
+	  .amtIn input{
+		  width: 100%;
+		  box-sizing: border-box;
+		  padding: 10px;
+		  font-size: 16px;
+	  }
   </style>
 </head>
   <body>
@@ -385,7 +393,7 @@
 
 			<p class="pahe">Amount</p>
 			<div class="amtIn">
-				<input type="tel">
+				<input type="tel" placeholder="0">
 				<div class="arrow arba">NGN</div>
 			</div>
 			<button class="amountBtn">17,497 - 14,409,902 NGN</button>
