--- a/app.html
+++ b/app.html
@@ -276,6 +276,7 @@
 	  }
 	  .amtIn input{
 		  width: 100%;
+		  outline: none;
 		  box-sizing: border-box;
 		  padding: 10px;
 		  font-size: 16px;
