--- a/app.html
+++ b/app.html
@@ -180,6 +180,8 @@
     }
 	  .xclose{
 		  margin: 5px 0 10px;
+		  position: fixed;
+		  top: 0;
 	  }
 	  .xclose button{
 		  background: transparent;
