--- a/app.html
+++ b/app.html
@@ -179,9 +179,9 @@
       transition: all 0.3s ease;
 	}
 	.xclose{
-		margin: 5px 0 10px;
+		margin: 5px 0;
 		position: fixed;
-		top: 0;
+		z-index: 2000;
 	}
 	.xclose button{
 		background: transparent;
@@ -189,7 +189,7 @@
 		color: #000;
 	}
 	.modalTitle{
-		margin: 30px 0;
+		margin: 40px 0;
 	}
 	.modalTitle h3{
 		margin: 5px 0;
