--- a/app.html
+++ b/app.html
@@ -182,6 +182,8 @@
 		margin: 5px 0;
 		position: fixed;
 		z-index: 2000;
+		background: #fff;
+		
 	}
 	.xclose button{
 		background: transparent;
