--- a/app.html
+++ b/app.html
@@ -179,11 +179,11 @@
       transition: all 0.3s ease;
 	}
 	.xclose{
-		margin: 5px 0;
+		margin: 10px 0 5px;
 		position: fixed;
 		z-index: 2000;
 		background: #fff;
-		
+		width: 100%;
 	}
 	.xclose button{
 		background: transparent;
