--- a/app.html
+++ b/app.html
@@ -179,7 +179,7 @@
       transition: all 0.3s ease;
 	}
 	.xclose{
-		margin: 10px 0 5px;
+		padding: 10px 0 5px;
 		position: fixed;
 		z-index: 2000;
 		background: #fff;
