--- a/app.html
+++ b/app.html
@@ -178,9 +178,11 @@
       box-sizing: border-box;
       transition: all 0.3s ease;
 	}
-	.xclose{
-		margin: 0;
-		padding: 10px 0 5px;
+    .xclose{
+      margin: 0;
+      padding: 10px 0 5px;		
+      border-top-left-radius: 30px;
+      border-top-right-radius: 30px;
 		position: fixed;
 		z-index: 2000;
 		background: #fff;
