--- a/app.html
+++ b/app.html
@@ -168,7 +168,7 @@
       position: fixed;
       box-shadow: 0 -5px 8px rgba(0,0,0,0.2);
       bottom: 0;
-      padding: 15px;
+      padding: 0 15px 15px;
       height: 97%;
       border-top-left-radius: 30px;
       border-top-right-radius: 30px;
