--- a/app.html
+++ b/app.html
@@ -271,7 +271,7 @@
 	}
 	.note{
 		background-color: #fffbf2;
-		border: 1px solid #fffaf0;
+		border: 1px solid #efeae0;
 		padding: 5px 15px;
 		border-radius: 10px;
 		border-shadow: 5px 5px 8px rgba(0, 0, 0, 0.15);
