--- a/app.html
+++ b/app.html
@@ -245,6 +245,9 @@
 	.arba{
 		display: flex;
 	}
+	.arba p{
+		margin-right: 10px;
+	}
 	.options {
 		position: absolute;
 		top: 100%;
@@ -395,7 +398,7 @@
 			<p class="pahe">Payment Method</p>
 			<div class="select">	
 				<input type="text" class="datalistInput" value="MT5:   592631072"  readonly>
-				<div class="arrow arba"><p>23,473.04 USD</p>▼</div>
+				<div class="arrow arba"><p>$23,473.04</p>▼</div>
 			</div>
 
 			<p class="pahe">Amount</p>
