--- a/app.html
+++ b/app.html
@@ -290,6 +290,15 @@
 		padding: 10px;
 		font-size: 16px;
 	}
+	.demain{
+		margin-top: 20px;
+	}
+	.demain button{
+		width: 100%;
+		text-align: center;
+		color: rgba(0, 0, 0, 0.8);
+		border: 1px solid rgba(0, 0, 0, 0.8);
+	}
   </style>
 </head>
   <body>
