--- a/app.html
+++ b/app.html
@@ -290,10 +290,10 @@
 		padding: 10px;
 		font-size: 16px;
 	}
-	.demain{
+	.deMain{
 		margin-top: 20px;
 	}
-	.demain button{
+	.deMain button{
 		width: 100%;
 		text-align: center;
 		color: rgba(0, 0, 0, 0.8);
