--- a/app.html
+++ b/app.html
@@ -298,6 +298,7 @@
 		text-align: center;
 		color: rgba(0, 0, 0, 0.5);
 		border: 1px solid rgba(0, 0, 0, 0.5);
+		padding: 10px;
 	}
   </style>
 </head>
