--- a/app.html
+++ b/app.html
@@ -297,8 +297,9 @@
 		width: 100%;
 		text-align: center;
 		color: rgba(0, 0, 0, 0.5);
+		background: transparent;
 		border: 1px solid rgba(0, 0, 0, 0.5);
-		padding: 10px;
+		padding: 12px;
 	}
   </style>
 </head>
