--- a/app.html
+++ b/app.html
@@ -200,10 +200,11 @@
 	.modalTitle button, .amountBtn{
 		background: transparent;
 		padding: 0;
-		font-size: 12px;
+		font-size: 14px;
+		font-weight: 400;
 	}
 	.modalBody{
-		  
+		  font-weight: 400;
 	}
 	.pahe{
 		margin: 0;
