--- a/app.html
+++ b/app.html
@@ -429,7 +429,7 @@
 			</div>
 			<button class="amountBtn">17,497 - 14,409,902 NGN</button>
 
-			<div class="deMain"><button id="depoSubmit">Continue</button></div>
+			<div id="depoSubmit" class="deMain"><button>Continue</button></div>
 
 			<div class="terms">
 				<h4>Terms</h4>
@@ -505,7 +505,6 @@ function hideDropdown(select) {
 	const keyDown = document.getElementById('keyDown');
 	
 	keyDown.addEventListener('keydown', function(e){
-		alert('found');
 		const button = document.getElementById('depoSubmit');
 		button.classList.add('colored');
 	});
