--- a/app.html
+++ b/app.html
@@ -507,12 +507,9 @@ function hideDropdown(select) {
 	keyDown.addEventListener('input', function(e){ 
 		const value = parseFloat(e.target.value) || 0;
 		const button = document.getElementById('depoSubmit');
-		if (value > 17497) {
+		if (value > 17497 && value < 14409902) {
 			// Handle the case where the input field is not small
 			button.classList.add('colored');
-		} else if (value < 14409902) {
-			// Handle the case where the input field is not big
-			button.classList.add('colored');	
 		} else { 
 			// Handle the case where the input field has a value
 			button.classList.remove('colored');
