--- a/app.html
+++ b/app.html
@@ -389,7 +389,7 @@
 				<input type="text" class="datalistInput" id="employ" placeholder="Please select one"  readonly>
 				<div class="arrow">▼</div>
 				<ul class="options">
-					<li data-value="Self-Employed">Self-Employed</li>
+					<li class="firstLi" data-value="Self-Employed">Self-Employed</li>
 					<li data-value="Student">Student</li>
 					<li data-value="Employed">Employed</li>
 					<li data-value="Unemployed">Unemployed</li>
@@ -409,7 +409,7 @@
 				<input type="text" class="datalistInput" id="employ" placeholder="Please select one"  readonly>
 				<div class="arrow">▼</div>
 				<ul class="options">
-					<li data-value="Self-Employed">Self-Employed</li>
+					<li class="firstLi" data-value="Self-Employed">Self-Employed</li>
 					<li data-value="Student">Student</li>
 					<li data-value="Employed">Employed</li>
 					<li data-value="Unemployed">Unemployed</li>
@@ -418,8 +418,11 @@
 
 			<p class="pahe">Payment Method</p>
 			<div class="select">	
-				<input type="text" class="datalistInput" value="MT5:   592631072"  readonly>
+				<input type="text" class="datalistInput" placeholder="Please select one"  readonly>
 				<div class="arrow arba"><p>$23,473.04</p>▼</div>
+				<ul class="options">
+					<li class="firstLi" data-value="Self-Employed">MT5:   592631072</li>
+				</ul>
 			</div>
 
 			<p class="pahe">Amount</p>
@@ -456,12 +459,15 @@ document.querySelectorAll('.select').forEach(select => {
   const arrow = select.querySelector('.arrow');
   const options = select.querySelector('.options');
   const optionItems = select.querySelectorAll('.options li');
+  const firstList = select.querySelectorAll('.firstLi');
   
   // Toggle this specific dropdown
   input.addEventListener('click', () => toggleDropdown(select));
   arrow.addEventListener('click', () => toggleDropdown(select));
   
   // Handle option selection for this dropdown
+  input.value = firstList.textContent;
+	
   optionItems.forEach(option => {
     option.addEventListener('click', () => {
       input.value = option.textContent;
