--- a/app.html
+++ b/app.html
@@ -394,7 +394,7 @@
         <div class="modalBody">
 			<p class="pahe">Payment Method</p>
 			<div class="select">	
-				<input type="text" class="datalistInput" id="employ" placeholder="Please select one"  readonly>
+				<input type="text" class="datalistInput" id="employ" readonly>
 				<div class="arrow">▼</div>
 				<ul class="options">
 					<div class="firstLi"><li data-value="Self-Employed">MT5:   592631072</li></div>
@@ -414,7 +414,7 @@
 
 			<p class="pahe">Payment Method</p>
 			<div class="select">	
-				<input type="text" class="datalistInput" id="employ" placeholder="Please select one"  readonly>
+				<input type="text" class="datalistInput" id="employ" readonly>
 				<div class="arrow">▼</div>
 				<ul class="options">
 					<div class="firstLi"><li data-value="Self-Employed">MT5:   592631072</li></div>
@@ -426,7 +426,7 @@
 
 			<p class="pahe">Payment Method</p>
 			<div class="select">	
-				<input type="text" class="datalistInput" placeholder="Please select one"  readonly>
+				<input type="text" class="datalistInput" readonly>
 				<div class="arba"><p>$23,473.04</p>▼</div>
 				<ul class="options">
 					<div class="firstLi"><li data-value="Self-Employed">MT5:   592631072</li></div>
