--- a/app.html
+++ b/app.html
@@ -246,9 +246,6 @@
 		padding: 0;
 		transition: transform 0.2s ease;
 	}
-	.arrow p{
-		margin: 0 5px;
-	}
 	.arba{
 		position: absolute;
 		top: 50%;
@@ -259,6 +256,9 @@
 		padding: 0;
 		transition: transform 0.2s ease;
 		display: flex;
+	}
+	.arba p{
+		margin: 0 5px;
 	}
 	.arba p{
 		margin-right: 10px;
