--- a/app.html
+++ b/app.html
@@ -436,7 +436,7 @@
 			<p class="pahe">Amount</p>
 			<div class="amtIn">
 				<input type="tel" id="keyDown" placeholder="0">
-				<div class="arrow arba">NGN</div>
+				<div class="arba">NGN</div>
 			</div>
 			<button class="amountBtn">17,497 - 14,409,902 NGN</button>
 
