--- a/app.html
+++ b/app.html
@@ -427,7 +427,7 @@
 			<p class="pahe">Payment Method</p>
 			<div class="select">	
 				<input type="text" class="datalistInput" readonly>
-				<div class="arba"><p>$23,473.04</p>▼</div>
+				<div class="arrow"><p>$23,473.04</p>▼</div>
 				<ul class="options">
 					<div class="firstLi"><li data-value="Self-Employed">MT5:   592631072</li></div>
 				</ul>
