--- a/app.html
+++ b/app.html
@@ -243,21 +243,11 @@
 		transform: translateY(-50%);
 		pointer-events: none;
 		color: #666;
-		padding: 0;
-		transition: transform 0.2s ease;
-	}
-	.arba{
-		position: absolute;
-		top: 50%;
-		right: 10px;
-		transform: translateY(-50%);
-		pointer-events: none;
-		color: #666;
-		padding: 0;
 		transition: transform 0.2s ease;
 		display: flex;
+		padding: 0;
 	}
-	.arba p{
+	.arrow p{
 		margin: 0 5px;
 	}
 	.arba p{
