--- a/app.html
+++ b/app.html
@@ -499,7 +499,7 @@ function showDropdown(select) {
   
   options.style.display = 'block';
   arrow.style.transform = 'translateY(-50%) rotate(180deg)';
-  noFlip.style.transform = 'translateY(-50%) rotate(360deg)';
+  noFlip.style.transform = 'none';
 }
 
 function hideDropdown(select) {
