--- a/app.html
+++ b/app.html
@@ -176,7 +176,13 @@
       z-index: 1000;
       overflow-y: auto;
       box-sizing: border-box;
+      opacity: 0;
+      visibility: hidden;
       transition: all 0.3s ease;
+	}
+	.modal.active{
+      opacity: 1;
+      visibility: visible;
 	}
     .xclose{
       margin: 0;
