--- a/app.html
+++ b/app.html
@@ -320,7 +320,6 @@
   <body>
     <div class="container">
       <div class="top">
-        <h3>Accounts</h3>
         <div class="topIcons">
           <i class="fa fa-university" aria-hidden="true"></i>
           <i class="fa fa-bell" aria-hidden="true"></i>
@@ -328,6 +327,10 @@
       </div>
 
       <div class="dashboard">
+		<div class="header">
+			<h3>Accounts</h3>
+		</div>
+		  
         <div class="userDetails">
           <p>OWOEYE MICHAEL</p>
           <p id="user">#592631072</p>
