--- a/app.html
+++ b/app.html
@@ -47,6 +47,9 @@
       box-shadow: 0 2px 4px rgba(0,0,0,0.1), 0 8px 20px rgba(0,0,0,0.15);
       border-radius: 15px;
     }
+	.header{
+		
+	}
     .userDetails{
       display: flex;
       align-items: center;
