--- a/app.html
+++ b/app.html
@@ -43,10 +43,12 @@
 	.header{
 		
 	}
+	.headDash{
+      margin: 100px 15px 0;
+      padding: 15px;	
+	}
     .dashboard{
       background: #fff;
-      margin: 100px 15px 0;
-      padding: 15px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1), 0 8px 20px rgba(0,0,0,0.15);
       border-radius: 15px;
     }
@@ -328,7 +330,8 @@
           <i class="fa fa-bell" aria-hidden="true"></i>
         </div>
       </div>
-	  
+
+      <div class="headDash">
       <div class="header">
 		  <h3>Accounts</h3>
 	  </div>
@@ -357,6 +360,7 @@
           <button><div class="icon"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>Details</button>
         </div>
       </div>
+	  </div>  
 
       <div class="body">
         <div class="tradesHead">
