--- a/app.html
+++ b/app.html
@@ -37,7 +37,10 @@
       margin: 100px 15px 0;	
 	}
 	.header{
-		
+		margin: 0;
+	}
+	.header h3{
+		font-size: 2rem;
 	}
     .dashboard{
       padding: 15px;
