--- a/app.html
+++ b/app.html
@@ -101,6 +101,7 @@
     }
     .userBalance{
       font-size: 22px;
+      margin: 5px;
       padding-left: 5px;
       font-weight: 900;
       font-family: "Roboto", "Arial", "Helvetica Neue", Helvetica, sans-serif;
