--- a/app.html
+++ b/app.html
@@ -340,7 +340,7 @@
     <div class="container">
       <div class="top">
         <div class="topIcons">
-          <i class="fa fa-clock-o" aria-hidden="true"></i>
+          <i class="fa fa-clock" aria-hidden="true"></i>
           <i class="fa fa-bell" aria-hidden="true"></i>
         </div>
       </div>
