--- a/app.html
+++ b/app.html
@@ -44,6 +44,7 @@
 		margin: 0;
 		padding-left: 5px;
 		font-weight: 900;
+		font-family: "Roboto", "Arial", "Helvetica Neue", Helvetica, sans-serif;
 	}
 	.header.in-top{
 		position: fixed;
@@ -107,7 +108,7 @@
       font-family: "Roboto", "Arial", "Helvetica Neue", Helvetica, sans-serif;
     }
 	.userBalance h4{
-      margin: 0;
+      margin: 5px 0;
 	}
     .dashButtons{
       display: flex;
