--- a/app.html
+++ b/app.html
@@ -105,7 +105,7 @@
       font-size: 22px;
       padding-left: 5px;
       font-weight: 900;
-      font-family: "Roboto", "Arial", "Helvetica Neue", Helvetica, sans-serif;
+      font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     }
 	.userBalance h4{
       margin: 10px 0;
@@ -368,7 +368,7 @@
         </div>
         
         <div class="userBalance">
-          <h4>$23,473.04</h4>
+          <h4>23,473.04 USD</h4>
         </div>
         
         <div class="dashButtons">      
