--- a/app.html
+++ b/app.html
@@ -43,8 +43,8 @@
 		font-size: 2rem;
 		margin: 0;
 		padding-left: 5px;
-		font-weight: 900;
-		font-family: "Roboto", "Arial", "Helvetica Neue", Helvetica, sans-serif;
+		font-weight: 600;
+		font-family: font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	}
 	.header.in-top{
 		position: fixed;
@@ -104,7 +104,7 @@
     .userBalance{
       font-size: 22px;
       padding-left: 5px;
-      font-weight: 900;
+      font-weight: 600;
       font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     }
 	.userBalance h4{
