--- a/app.html
+++ b/app.html
@@ -43,7 +43,7 @@
 		font-size: 2rem;
 		margin: 0;
 		padding-left: 5px;
-		font-weight: 900;
+		font-weight: bold;
 		font-family: font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	}
 	.header.in-top{
