--- a/app.html
+++ b/app.html
@@ -44,7 +44,7 @@
 		margin: 0;
 		padding-left: 5px;
 		font-weight: bold;
-		font-family: font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+		font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	}
 	.header.in-top{
 		position: fixed;
