--- a/app.html
+++ b/app.html
@@ -43,7 +43,6 @@
 		font-size: 2rem;
 		margin: 0;
 		padding-left: 5px;
-		font-weight: bold;
 		font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	}
 	.header.in-top{
@@ -108,6 +107,7 @@
     }
 	.userBalance h4{
       margin: 15px 0;
+      font-weight: 400;
 	}
     .dashButtons{
       display: flex;
