--- a/app.html
+++ b/app.html
@@ -26,7 +26,7 @@
       width: 100%;
     }
     .topIcons{
-      position: relative;
+      position: fixed;
       right: 5%;
     }
     .top i{
@@ -56,7 +56,7 @@
 		background: transparent;
 		z-index: 1001;
 	}
-	.header.in-top h1{
+	.header.in-top h3{
 		font-size: 1.5rem;
 		margin-bottom: 0;
 	}
