--- a/app.html
+++ b/app.html
@@ -28,6 +28,8 @@
     .topIcons{
       position: fixed;
       right: 5%;
+      border: 1px solid red;
+      margin: 10px;
     }
     .top i{
       margin-left: 30px;
