--- a/app.html
+++ b/app.html
@@ -26,8 +26,8 @@
       width: 100%;
     }
     .topIcons{
-      position: fixed;
-      right: 5%;
+      /*position: relative;
+      right: 5%;*/
       border: 1px solid red;
       margin: 10px;
     }
