--- a/app.html
+++ b/app.html
@@ -351,11 +351,11 @@
       </div>
 
       <div class="headDash">
-      <div id="header" class="header">
+      <div class="header">
 		  <h3>Accounts</h3>
 	  </div>
 
-      <div class="dashboard">  
+      <div id="dash" class="dashboard">  
         <div class="userDetails">
           <p>OWOEYE MICHAEL</p>
           <p id="user">#592631072</p>
@@ -561,7 +561,7 @@ function hideDropdown(select) {
 	});
 	
         document.addEventListener('DOMContentLoaded', function() {
-            const header = document.getElementById('header');
+            const header = document.getElementById('dash');
             const fixedTop = document.querySelector('.top');
             
             // Calculate when header should jump to fixed top
