--- a/app.html
+++ b/app.html
@@ -351,7 +351,7 @@
       </div>
 
       <div class="headDash">
-      <div class="header">
+      <div id="flip" class="header">
 		  <h3>Accounts</h3>
 	  </div>
 
@@ -561,7 +561,7 @@ function hideDropdown(select) {
 	});
 	
         document.addEventListener('DOMContentLoaded', function() {
-            const header = document.getElementById('dash');
+            const header = document.getElementById('flip');
             const fixedTop = document.querySelector('.top');
             
             // Calculate when header should jump to fixed top
