--- a/app.html
+++ b/app.html
@@ -39,7 +39,7 @@
       margin: 80px 15px 0;	
 	}
 	.header{
-		margin: 10px 0;
+		margin: 0;
 	}
 	.header h3{
 		font-size: 2rem;
@@ -63,6 +63,7 @@
 		margin-bottom: 0;
 	}
     .dashboard{
+      margin-top: 10px;
       padding: 15px;
       background: #fff;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1), 0 8px 20px rgba(0,0,0,0.15);
