--- a/app.html
+++ b/app.html
@@ -43,9 +43,9 @@
 		border: 1px solid green;
 	}
 	.header h3{
-		font-size: 2rem;
+		font-size: 20px;
 		margin: 0;
-		padding-left: 5px;
+		padding: 0 0 0 5px;
 		font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	}
 	.header.in-top{
