--- a/app.html
+++ b/app.html
@@ -36,11 +36,14 @@
       font-size: 18px;
     }
 	.headDash{
-      margin: 80px 15px 0;	
+      margin: 80px 15px 0;
+      border: 1px solid blue;
+      position: relative;
 	}
 	.header{
 		margin: 0;
 		padding: 0;
+		position: absolute;
 		border: 1px solid green;
 	}
 	.header h3{
