--- a/app.html
+++ b/app.html
@@ -39,11 +39,14 @@
       margin: 100px 15px 0;
       border: 1px solid blue;
       position: relative;
+      padding-top: 50px;;
+
 	}
 	.header{
 		margin: 0;
 		padding: 0;
 		position: absolute;
+		top: 40px;
 		border: 1px solid green;
 	}
 	.header h3{
