--- a/app.html
+++ b/app.html
@@ -36,10 +36,10 @@
       font-size: 18px;
     }
 	.headDash{
-      margin: 50px 15px 0;
+      margin: 0 15px;
       border: 1px solid blue;
       position: relative;
-      padding-top: 50px;;
+      padding-top: 100px;
 
 	}
 	.header{
