--- a/app.html
+++ b/app.html
@@ -26,8 +26,9 @@
       width: 100%;
     }
     .topIcons{
-      /*position: relative;
-      right: 5%;*/
+      position: relative;
+      right: 5%;
+      width: 100%;
       border: 1px solid red;
       margin: 10px;
     }
