--- a/app.html
+++ b/app.html
@@ -17,7 +17,7 @@
       font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
     }
     .top{
-      background: #f2f2f3;
+      background: fff; /*#f2f2f3;*/
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -26,13 +26,13 @@
       width: 100%;
     }
     .topIcons{
-      position: relative;
-      right: 5%;
       width: 100%;
       border: 1px solid red;
       margin: 10px;
     }
     .top i{
+      position: relative;
+      right: 5%;
       margin-left: 30px;
       font-size: 18px;
     }
