--- a/app.html
+++ b/app.html
@@ -67,7 +67,8 @@
 		z-index: 1001;
 	}
 	.header.in-top h3{
-		font-size: 1rem;
+		font-size: 16px;
+		font-weight: bold;
 		font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
 		margin-bottom: 0;
 	}
