--- a/app.html
+++ b/app.html
@@ -32,7 +32,7 @@
       margin: 10px;
     }
     .top i{
-      position: relative;
+      position: absolute;
       right: 5%;
       margin-left: 30px;
       font-size: 18px;
