--- a/app.html
+++ b/app.html
@@ -69,7 +69,7 @@
 	}
 	.header.in-top h3{
 		font-size: 20px;
-		font-weight: bold;
+		font-weight: 900;
 		font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
 		margin-bottom: 0;
 	}
