--- a/app.html
+++ b/app.html
@@ -17,7 +17,7 @@
       font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
     }
     .top{
-      background: fff; /*#f2f2f3;*/
+      background: #fff; /*#f2f2f3;*/
       display: flex;
       align-items: center;
       justify-content: space-between;
