--- a/app.html
+++ b/app.html
@@ -68,7 +68,7 @@
 	.header.in-top h3{
 		font-size: 20px;
 		font-weight: 900;
-		font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+		font-family: "Roboto", "Arial", "Helvetica Neue", Helvetica, sans-serif;
 		margin-bottom: 0;
 	}
     .dashboard{
