--- a/app.html
+++ b/app.html
@@ -21,7 +21,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      /*position: fixed;*/
+      position: fixed;
       top: 0;
       width: 100%;
       height: auto;
