--- a/app.html
+++ b/app.html
@@ -64,6 +64,7 @@
 		margin-top: 0;
 		padding: 10px 30px;
 		background: transparent;
+		z-index: 1001;
 	}
 	.header.in-top h3{
 		font-size: 20px;
