--- a/app.html
+++ b/app.html
@@ -17,7 +17,7 @@
       font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
     }
     .top{
-      background: #fff; /*#f2f2f3;*/
+      background: #f2f2f3;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -29,8 +29,9 @@
     }
     .topIcons{
       width: 100%;
-      border: 1px solid red;
       margin: 10px;
+      text-align: right;
+      justify-right: right;
     }
     .top i{
       margin-left: 30px;
