--- a/app.html
+++ b/app.html
@@ -34,7 +34,7 @@
       justify-right: right;
     }
     .top i{
-      margin-left: 30px;
+      margin-right: 30px;
       font-size: 18px;
     }
 	.headDash{
