--- a/app.html
+++ b/app.html
@@ -29,12 +29,12 @@
     }
     .topIcons{
       width: 100%;
-      margin: 10px;
+      margin: 15px;
       text-align: right;
       justify-right: right;
     }
     .top i{
-      margin-right: 30px;
+      margin-left: 30px;
       font-size: 18px;
     }
 	.headDash{
