--- a/app.html
+++ b/app.html
@@ -31,7 +31,7 @@
       width: 100%;
       margin: 15px;
       text-align: right;
-      justify-right: right;
+      /*justify-right: right; */
     }
     .top i{
       margin-left: 30px;
