--- a/app.html
+++ b/app.html
@@ -29,7 +29,7 @@
     }
     .topIcons{
       width: 100%;
-      margin: 17px;
+      margin: 5px 17px;
       text-align: right;
     }
     .top i{
