--- a/app.html
+++ b/app.html
@@ -65,6 +65,7 @@
 		z-index: 1001;
 	}
 	.header.in-top h3{
+		border: 1px solid green;
 		font-size: 20px;
 		font-weight: 900;
 		font-family: "Roboto", "Arial", "Helvetica Neue", Helvetica, sans-serif;
