--- a/app.html
+++ b/app.html
@@ -209,8 +209,8 @@
       z-index: 1000;
       overflow-y: auto;
       box-sizing: border-box;
-      opacity: 0;
-      visibility: hidden;
+      /*opacity: 0;
+      visibility: hidden;*/
       transition: all 0.3s ease;
 	}
 	.modal.active{
