--- a/app.html
+++ b/app.html
@@ -208,6 +208,7 @@
       width: 100%;
       z-index: 1000;
       overflow-y: auto;
+      overflow-x: hidden;
       box-sizing: border-box;
       /*opacity: 0;
       visibility: hidden;*/
