--- a/app.html
+++ b/app.html
@@ -214,6 +214,9 @@
       visibility: hidden;
       transition: all 0.3s ease;
 	}
+	.modal::-webkit-scrollbar {
+		display: none
+	}
 	.modal.active{
       opacity: 1;
       visibility: visible;
