--- a/app.html
+++ b/app.html
@@ -620,8 +620,8 @@ function hideDropdown(select) {
         }
 
         // Event listeners
-        openModal.addEventListener('click', openPopup());
-        closeModal.addEventListener('click', closePopup());
+        openModal.addEventListener('click', openPopup);
+        closeModal.addEventListener('click', closePopup);
 
 			 // Close pop-up when clicking outside content
         deposit.addEventListener('click', function(e) {
