--- a/app.html
+++ b/app.html
@@ -618,6 +618,7 @@ function hideDropdown(select) {
             modal.classList.remove('active');
             document.body.style.overflow = 'auto'; // Restore scrolling
         }
+	openPopup(deposit);
 
         // Event listeners
         openDeposit.addEventListener('click', function(){
