--- a/app.html
+++ b/app.html
@@ -622,7 +622,7 @@ function hideDropdown(select) {
 
         // Event listeners
         openDeposit.addEventListener('click', function(){
-			openPopup(deposit);
+			openPopup;
 		}
         closeDeposit.addEventListener('click', function(){
 			closePopup(deposi);
