--- a/modal.html
+++ b/modal.html
@@ -248,7 +248,7 @@
         }
 
         // Event listeners
-        openPopupBtn.addEventListener('click', openPopup);
+        openPopupBtn.addEventListener('click', openPopup());
         closePopupBtn.addEventListener('click', closePopup);
 
         // Close pop-up when clicking outside content
