--- a/app.html
+++ b/app.html
@@ -387,7 +387,7 @@
         
         <div class="dashButtons">      
           <button><div class="icon home"><i class="fa fa-area-chart" aria-hidden="true"></i></div>Trade</button>
-          <button id="openDeposit"><div class="icon"><i class="fa fa-arrow-up" aria-hidden="true"></i></div>Deposit</button>
+          <button onclick="openModal('deposit')"><div class="icon"><i class="fa fa-arrow-up" aria-hidden="true"></i></div>Deposit</button>
           <button><div class="icon"><i class="fa fa-paper-plane" aria-hidden="true"></i></div>Withdraw</button>
           <button><div class="icon"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>Details</button>
         </div>
