--- a/app.html
+++ b/app.html
@@ -421,7 +421,7 @@
       
       <div id="deposit" class="modal">
         <div class="xclose">
-          <button id="closeDeposit">&times;</button>
+          <button onclick="closeModal('deposit')">&times;</button>
         </div>
         
         <div class="modalTitle">
